--- a/TP 2/.project
+++ b/TP 2/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>laboratorio1_tp2</name>
+	<name>laboratorio1_tp2_VERSION2</name>
 	<comment></comment>
 	<projects>
 	</projects>
